--- a/examples/snmp.yml
+++ b/examples/snmp.yml
@@ -3,6 +3,7 @@ default:
   auth:
     community: public
   walk:
+  - 1.3.6.1.2.1.1.3
   - 1.3.6.1.2.1.31.1.1.1.6
   - 1.3.6.1.2.1.31.1.1.1.10
   - 1.3.6.1.2.1.2.2.1.2
@@ -62,3 +63,7 @@ default:
   - name: memTotalFree
     oid: 1.3.6.1.4.1.2021.4.11
     type: gauge
+  - name: sysUpTime
+    oid: 1.3.6.1.2.1.1.3
+    type: gauge
+    
